--- a/JAVASCRIPT/test.html
+++ b/JAVASCRIPT/test.html
@@ -1,15 +1,11 @@
-<script>
-    function say_to_user(callback){
-    console.log("This is callback",callback)
-    let name = "Saurav"
-    callback(name)
-    
-    
-}
-
-function sayHello(name){
-    console.log(`Hello ${name}`)
-}
-
-say_to_user(sayHello)
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore quas in dolores blanditiis et perspiciatis nihil qui pariatur possimus non, magni doloribus, molestiae dignissimos delectus cupiditate corporis aliquam dolorum veniam.</h1>
+</body>
+</html>
